# kokoro

./: .gitignore  Cargo.toml  README.md
data/: phrases.json
examples/: synth_directly_v10.rs  synth_directly_v11.rs  synth_stream.rs
src/: g2p.rs  stream.rs  synthesizer.rs  tokenizer.rs
src/g2p/: v10.rs  v11.rs
src/transcription/: zh.rs
