[package]
name = "kokoro-tts"
description = "用于Rust的轻量级AI离线语音合成器（Kokoro TTS），可轻松交叉编译到移动端"
version = "0.3.1"
edition = "2024"
keywords = ["TTS", "Offline", "Lite", "AI", "Synthesizer"]
license = "Apache-2.0"
repository = "https://github.com/mzdk100/kokoro.git"
readme = "README.md"

[features]
use-cmudict = ["cmudict-fast"]

[dependencies]
bincode = "2.0.1"
chinese-number = { version = "0.7.7", default-features = false, features = [
    "number-to-chinese",
    "chinese-to-number"
] }
cmudict-fast = { version = "0.8.0", optional = true }
futures = "0.3.31"
jieba-rs = "0.8.1"
log = "0.4.28"
ndarray = "0.17"
ort = "2.0.0-rc.10"
pin-project = "1.1.10"
pinyin = "0.10.0"
rand = "0.10.0-rc.0"
regex = "1.12.2"
tokio = { version = "1.48.0", features = [
    "fs",
    "rt-multi-thread",
    "time",
    "sync"
] }

[dev-dependencies]
anyhow = "1.0.100"
rodio = { version = "0.21.1", default-features = false, features = [
    "wav",
    "playback"
] }
tokio = { version = "1.48.0", features = ["macros"] }

[build-dependencies]
cc = "1.2.41"
